<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="405dp"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_above="@+id/loginLayout"
            android:layout_marginTop="35dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="end"
                android:text="company"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="Register"
                android:textAlignment="viewStart"
                android:textColor="@android:color/white"
                android:textSize="30dp" />
        </LinearLayout>



    </RelativeLayout>


    <RelativeLayout
        android:layout_width="345dp"
        android:layout_height="303dp"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/listname"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:hint="@string/ListName"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/listamount"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_below="@+id/listname"
            android:layout_marginTop="35dp"
            android:hint="@string/ListAmount"
            android:textColor="@color/colorBlack" />


        <EditText
            android:id="@+id/listdate"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_below="@+id/listamount"
            android:layout_marginTop="27dp"
            android:hint="@string/ListDate"
            android:textColor="@color/colorBlack" />
    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="117dp"
        android:layout_marginRight="117dp"
        android:layout_marginBottom="78dp"
        android:background="@drawable/btn_bg"
        android:text="Update"
        android:textColor="@color/colorWhite" />

</RelativeLayout>